Fixed search-box on small screens

--- a/src/app/user-module/styles/users.component.css
+++ b/src/app/user-module/styles/users.component.css
@@ -27,6 +27,7 @@ td, th {
 .search-box {
   position: relative;
   width:25% ;
+  min-width: 200px;
 }
 
 /* style icon */
